# cs107-FinalProject

./: .coverage  .travis.yml  Demo.ipynb  Demo_reverse.ipynb  LICENSE  README.md  coverage.xml  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: workflow.yml
.ipynb_checkpoints/: Demo-checkpoint.ipynb
docs/: documentation.ipynb  milestone1.ipynb  milestone2_progress.ipynb
docs/.ipynb_checkpoints/: milestone2-checkpoint.ipynb
src/: Derivatives.py  Dual_class.py  Reverse.py  Reverse_deriv.py
src/cs107Prime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cs107_4thprime/: Dual_class.py  Reverse.py  __init__.py
tests/: .coverage  coverage.xml  run_tests.sh  test_derivatives.py  test_derivatives_reverse.py  test_dual.py  test_integrate.py  test_reverse.py
