[metadata]
name = cs107_package_4thPrime
version = 0.0.1
author = 'Sirui Hu, Xiwen Jia, Jason Friedman, Robert Shekoyan'
author_email = 'siruihu@g.harvard.edu, xjia@g.harvard.edu, jasonfriedman@g.harvard.edu, rshekoyan@college.harvard.edu'
description = Automatic Differentiation with Forward and Reverse Mode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-4thPrime/cs107-FinalProject.git
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src